--- a/css/style2.css
+++ b/css/style2.css
@@ -1116,7 +1116,7 @@ text-shadow:
    display: block;
   }
   .feb1943 {
-  background: url(../img/feb1943.jpg) no-repeat center center;
+  background: url(../img/jan1944.png) no-repeat center center;
   width: 60%;
   height: 100vh;
   background-size: cover;
@@ -1567,7 +1567,7 @@ text-shadow:
    display: block;
 }
 .yan1944 {
-  background: url(../img/jan1944.png) no-repeat center center;
+  background: url(../img/feb1943_1.jpg) no-repeat center center;
   width: 60%;
   height: 100vh;
   background-size: cover;
